# doenerkarte

./: notes.txt
backend/: .env  Cargo.toml  Rocket.toml  compose.yaml
backend/migrations/: 0001_setup.down.sql  0001_setup.up.sql
backend/src/: main.rs
doenerkarte_frontend/: README.md  pubspec.yaml
doenerkarte_frontend/android/app/: build.gradle
doenerkarte_frontend/ios/Runner/: Info.plist
doenerkarte_frontend/ios/Runner.xcodeproj/: project.pbxproj
doenerkarte_frontend/lib/: main.dart
doenerkarte_frontend/lib/communication/communicator/: backend_communicator.dart
doenerkarte_frontend/lib/communication/entities/: Area.dart  Doener.dart
doenerkarte_frontend/lib/communication/repositories/: doener_area_repository.dart  doener_avg_repo.dart
doenerkarte_frontend/lib/core/core_widgets/: main_scaffold.dart
doenerkarte_frontend/lib/core/reusable_widgetas/: adress_autocomplete.dart
doenerkarte_frontend/lib/core/utils/: geo_utils.dart  search_completetion.dart
doenerkarte_frontend/linux/: CMakeLists.txt  my_application.cc
doenerkarte_frontend/macos/Runner.xcodeproj/: project.pbxproj
doenerkarte_frontend/test/: widget_test.dart
doenerkarte_frontend/web/: index.html  manifest.json
doenerkarte_frontend/windows/: CMakeLists.txt
doenerkarte_frontend/windows/runner/: Runner.rc  main.cpp
google_maps_data/: .gitignore  Untitled.ipynb  doener.ipynb  doener_entry.py  doenerdownload.py  merged_output.json  merged_response_output.json  munich_doener_df.json  munich_doener_df_with_price.json  munich_doener_df_with_price_nan.json  notes
(+7 files in other folders)
